feat(car-rental-latihan): add detail bayar page

--- a/detail-bayar.html
+++ b/detail-bayar.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Halaman Detail Bayar</title>
     <section class="detail-bayar">
-        <h1>Halaman Detail Bayar</h1>
+        <h1>Halaman Detail Bayar 2</h1>
         <div class="isi-detail">
             <span>Ini adalah detail pembayaran kamu</span>
         </div>
