--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sewa Mobil</title>
 </head>
 <body>
-    
+    <nav></nav>
+    <div>
+        <h1>SEWA MOBIL</h1>
+    </div>
+    <footer></footer>
 </body>
 </html>
