--- a/detail-bayar.html
+++ b/detail-bayar.html
@@ -8,6 +8,7 @@
     <title>Halaman Detail Bayar</title>
     <section class="detail-bayar">
         <h1>Halaman Detail Bayar 2</h1>
+        <img src="gambar.png">
         <div class="isi-detail">
             <span>Ini adalah detail pembayaran kamu</span>
         </div>
